--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "scripts": {
     "mongo": "mongod --dbpath data/db",
     "devServer": "babel-node server/devServer.js",
+    "pro": "npm run prebuild build",
     "server": "cd server && node server.js",
-    "start": "npm run mongo & sleep 3 & npm run server"
+    "start": "npm run mongo & sleep 3 & npm run server",
+    "clean-dist": "npm run remove-dist && mkdir dist",
+    "remove-dist": "node_modules/.bin/rimraf ./dist",
+    "build:html": "babel-node server/buildHtml.js",
+    "prebuild": "npm-run-all clean-dist build:html",
+    "build": "babel-node server/build.js",
+    "postbuild": "node server/distServer.js"
   },
   "version": "1.0.0",
   "private": true,
